# thrift

./: .gitignore  configure.ac  thrift.mk
lib/c_glib/: Makefile.am
lib/c_glib/src/thrift/c_glib/: thrift.h
lib/c_glib/src/thrift/c_glib/processor/: thrift_dispatch_processor.c
lib/c_glib/src/thrift/c_glib/protocol/: thrift_binary_protocol.c  thrift_binary_protocol.h  thrift_protocol.c  thrift_protocol.h
lib/c_glib/src/thrift/c_glib/server/: thrift_server.c  thrift_server.h  thrift_simple_server.c  thrift_simple_udp_server.c  thrift_simple_udp_server.h
lib/c_glib/src/thrift/c_glib/transport/: thrift_buffered_transport.c  thrift_buffered_udp_transport.c  thrift_buffered_udp_transport.h  thrift_buffered_udp_transport_factory.c  thrift_buffered_udp_transport_factory.h  thrift_framed_transport.c  thrift_memory_buffer.c  thrift_server_socket.c  thrift_server_udp_socket.c  thrift_socket.c  thrift_socket.h  thrift_transport.c  thrift_transport.h  thrift_udp_socket.c  thrift_udp_socket.h
tutorial/: Makefile.am  SharedMemoryTest.thrift  SimpleArrayComputation.thrift  tutorial.thrift
tutorial/c_glib/: Makefile.am  c_glib_client.c  c_glib_client.c.old  c_glib_remote_mem_test_server.c  c_glib_server.c  c_glib_server.c.old  c_glib_simple_array_comp_server.c
tutorial_thrift/: Makefile.am  RemoteMemoryTest.thrift  SimpleArrayComputation.thrift
tutorial_thrift/c_glib/: Makefile.am  c_glib_client.c  c_glib_remote_mem_test_server.c  c_glib_simple_array_comp_server.c  thrift_client  thrift_remote_mem_test_server  thrift_simple_array_comp_server
tutorial_thrift/cpp/: CppServer.cpp
